Able to see Registration Form

--- a/src/main/application/.sencha/app/development.defaults.properties
+++ b/src/main/application/.sencha/app/development.defaults.properties
@@ -1,32 +1,30 @@
 # =============================================================================
-# This file defines default property values that apply to the "production" build
+# This file defines default property values that apply to the "development" build
 # environment.
 #
-# Please use production.properties to customize these properties unless you want
+# Please use testing.properties to customize these properties unless you want
 # your customizations to be for all environments. In that case, you can instead
 # override these properties in build.properties.
 #
 # The properties defined in this file take priority over defaults.properties
 # but are lower priority than build.properties which in turn is lower priority
-# than production.properties.
+# than development.properties.
 #
 # IMPORTANT - This file should not be modified by an app as it is overwritten
 # during each app upgrade.
 # =============================================================================
 
-build.options.logger=no
+build.options.logger=yes
 
-build.options.debug=false
+build.options.debug=true
 
-# enable yui compression
-build.compression.yui=1
+build.css.compress=false
 
-# enable the full class system optimizer
-app.output.js.optimize=true
-build.optimize=${build.optimize.enable}
+build.include.all.scss=true
 
-enable.cache.manifest=true
-
-enable.resource.compression=true
-
-build.embedded.microloader.compressor=-closure
+# By default we don't need to build an "all.js" file, or a new markup page or
+# slice images for IE8/9. These can be added to "development.properties" and
+# set to 0 to enable them if needed.
+skip.page=1
+skip.js=1
+skip.slice=1
