--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
+                <version>1.3.2</version>
                 <executions>
                     <execution>
                         <id>sencha-compile</id>
@@ -112,19 +112,27 @@
                         </goals>
                         <configuration>
                             <!-- Set path to your Sencha Cmd executable-->
-                            <executable>${env.SENCHA_CMD}</executable>
+                            <executable>sencha.exe</executable>
+                            <workingDirectory>${project.basedir}/src/main/application</workingDirectory>
                             <arguments>
-                                <argument>-sdk</argument>
-                                <argument>${basedir}/src/main/application</argument>
                                 <argument>app</argument>
                                 <argument>build</argument>
-                                <argument>--clean</argument>
                                 <argument>--environment</argument>
                                 <argument>${sencha.env}</argument>
                             </arguments>
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.3.v20140905</version>
+                <configuration>
+                    <stopKey>STOP</stopKey>
+                    <stopPort>9999</stopPort>
+                    <webAppSourceDirectory>src/main/application/build/${sencha.env}/MyApp</webAppSourceDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
